* Minor changes (fixed inactive DivanDesign.biz links).

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		"hide empty section",
 		"hide empty tab"
 	],
-	"homepage": "https://code.divandesign.biz/modx/mm_hideempty",
+	"homepage": "https://code.divandesign.ru/modx/mm_hideempty",
 	"support": {
 		"chat": "https://t.me/dd_code"
 	},
